--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,10 @@
 # Default profile
-spring.profiles.active=local
 server.port=8096
+spring.profiles.active=local
 
 
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/test-postgres?useSSL=false&createDatabaseIfNotExists=true
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
