--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = isa.2018.tim1@gmail.com
+spring.mail.password = 987656789
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
