problem with tests fixed

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,5 +6,13 @@ spring.profiles.active=local
 spring.datasource.url= jdbc:postgresql://localhost:5432/test-postgres?useSSL=false&createDatabaseIfNotExists=true
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# H2 ne moze
+#spring.h2.console.enabled=true
+# Datasource
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
